--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -31,13 +32,26 @@
             android:textSize="48sp" />
 
         <TextView
-            android:id="@+id/p2View"
+            android:id="@+id/p2Name"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:text="Player 2"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:visibility="gone" />
+            android:textColor="#ffffffff"
+            android:gravity="center"
+            android:visibility="gone"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/p2Score"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:text="0"
+            android:textColor="#ffffffff"
+            android:gravity="center"
+            android:visibility="gone"
+            android:textSize="48sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,37 +64,40 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b0.1"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b0.2"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b0.3"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -92,41 +109,45 @@
             android:layout_weight="3" >
             <ImageButton
                 android:id="@+id/b1.0"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b1.1"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b1.2"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b1.3"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -137,41 +158,45 @@
             android:layout_weight="3" >
             <ImageButton
                 android:id="@+id/b2.0"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b2.1"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b2.2"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b2.3"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -182,41 +207,45 @@
             android:layout_weight="3" >
             <ImageButton
                 android:id="@+id/b3.0"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b3.1"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b3.2"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
             <ImageButton
                 android:id="@+id/b3.3"
+                android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/background"
                 android:padding="4dp"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
