- fixed orientation to portrait - removed ugly scaleAnimations - replaced background tiled xml by image

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -63,9 +63,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -74,9 +74,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -85,9 +85,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -96,9 +96,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -113,9 +113,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -124,9 +124,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -135,9 +135,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -146,9 +146,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -162,9 +162,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -173,9 +173,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -184,9 +184,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -195,9 +195,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -211,9 +211,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -222,9 +222,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -233,9 +233,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
@@ -244,9 +244,9 @@
                 android:onClick="play"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/background"
+                android:src="@drawable/back"
                 android:padding="4dp"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 android:cropToPadding="true"
                 android:background="#00000000"
                 android:layout_weight="1" />
